Refatoração dos services e resources e criação dos testes unitários.